--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Login Dani </title>
     <link rel="Stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png">
 
 </head>
 
